stylemob.css
/* ========================================================
                 Typography
======================================================= */
@font-face {
  font-family: "Avalon";
  src: url("./Assets/fonts/avalon/Avalon_Bold.ttf");
  font-style: bold;
  font-weight: 900;
}

@font-face {
  font-family: "Shentox";
  src: url("./Assets/fonts/Shentox/Shentox\ W01\ Regular.ttf");
  font-style: bold;
  font-weight: 900;
}

:root h2 {
  font-weight: bolder;
  font-size: 2rem;
  line-height: 1.5em;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;
}

:root h1 {
  font-size: 1.5rem;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;
}

:root a {
  text-decoration: none;
  font-family: "Shentox", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 1rem;
}

.logo {
  z-index: 9999;
  width: 106px;
  height: 50px;

  /* background-image: url('https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/tnw.svg'), linear-gradient(to bottom right,#c09,#f42 85%)  ; */
  background-image: linear-gradient(to bottom right, #c09, #f42 85%);

  /* background-color: #f42; */
  background-repeat: no-repeat;
  background-position: center;

  /* padding: 1em; */

  /* margin: 0 1em; */
  background-size: 100%;
}

.logo img {
  width: 68px;
  padding: 1em;
}

/* body {
  font-family: sans-serif;
  width: 100vw;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;
} */

.top {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 9999;
}

.nav1 {
  display: none;
}

.nav-list {
  display: none;
  justify-content: space-around;
}

.nav2 {
  background-color: white;
  display: flex;
  justify-content: space-between;
  height: 50px;

  /* border: 1px solid red; */

  /* position: fixed; */

  /* margin: -10px; */
}

.nav-icons {
  display: flex;
  width: 10%;
}

.nav-icons * {
  margin: 10%;
  width: 100%;
}

.search .fa-search {
  width: 100%;
}

.dropdown-menu .fa-bars {
  width: 100%;
  color: #f42;
}

.container {
  width: 100%;
  border: 3px solid black;
}

.cover {
  box-sizing: border-box;
  width: 100%;
  height: 40vh;

  /* margin: 1em auto; */
  justify-content: center;

  /* border: 1px solid red; */
}

.main-cover {
  /* box-sizing: inherit; */
  background-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent), url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/1-30-796x417.jpg');
  background-repeat: no-repeat;
  background-size: 100% 100%;

  /* max-height: 41vw; */
  padding: 2%;

  /* min-height: 40vw; */
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-start;
  margin: 1em;

  /* width: 100%; */
  color: rgb(139, 139, 139);
  font-size: 0.7rem;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;
}

.date {
  display: none;
}

.main-cover .title {
  font-size: 1.6em;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;

  /* min-width: 300px; */

  /* border: 1px solid blue; */
  padding: 0.3em 0;
  color: white;
}

.aside-cover-1 .title {
  font-size: 1.6em;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;

  /* min-width: 300px; */

  /* border: 1px solid blue; */
  padding: 0.3em 0;
  color: white;
}

.aside-cover-2 .title {
  font-size: 1.6em;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;

  /* min-width: 300px; */

  /* border: 1px solid blue; */
  padding: 0.3em 0;
  color: white;
}

.details a {
  color: rgb(139, 139, 139);
  text-decoration: none;
}

.tag {
  /* display: none; */
  color: rgb(139, 139, 139);
}

.aside-cover-1 {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent), url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/Untitled-design-11-796x417.png');
  background-repeat: no-repeat;
  background-size: 100% 100%;
  padding: 2%;

  /*   min-height: 40vw; */
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-start;
  margin: 1em;

  /* width: 90%; */
  color: rgb(139, 139, 139);
  font-size: 0.7rem;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;
}

.aside-cover-2 {
  /* background-position: 50%; */

  /* background-size: cover; */
  background-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent), url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/04/1-30-796x417.jpg');
  background-repeat: no-repeat;
  background-size: 100% 100%;
  padding: 2%;

  /* min-height: 40vw; */
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: flex-start;
  margin: 1em;

  /* width: 90%; */
  color: rgb(139, 139, 139);
  font-size: 0.7rem;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;
}

.main {
  border: 3px solid red;
}

.news {
  padding: 1em;
}

.news>h2 {
  color: #f42;
}

.story {
  display: flex;
  padding-bottom: 0.8em;

  /* border: 1px solid red; */
}

.story-link {
  flex: 1;
}

.story-image {
  width: 100%;
  height: 100%;
}

.story-text {
  flex: 5;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding-left: 1em;

  /* background-color: red; */

  /* border: 1px solid red; */
  font-size: 0.85rem;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;
}

.story-byLine span {
  margin-right: 2%;
  color: rgb(140, 140, 140);
  font-size: 0.75em;

  /* font-weight: bolder; */
}

/* Funding */

.funding {
  display: flex;
  flex-direction: column;

  /* margin-left: 1em; */

  /* margin-right: 1em; */
  margin: 0 1em;

  /* justify-content: flex-start; */

  /* border: 1px solid red; */
}

.funding-title>div {
  /* border: 1px solid green; */
  display: flex;
  flex-direction: column;
  margin-top: 1em;
}

.funding-subtitle {
  /* border: 1px solid blue; */
  font-size: 0.85rem;
  font-family: "Avalon", Tahoma, Geneva, Verdana, sans-serif;
  margin-bottom: 0.625em;
  text-decoration: none;
  color: #f42;
}

.funding-title>h2 {
  color: #f42;
}
/* ... */

